--- a/source/options.html
+++ b/source/options.html
@@ -14,12 +14,13 @@
 	<div id="wrap">
 		<img src="head.jpg" alt="easyBitly" />
 		<div id="settings">
+			<p><b>Usage:</b> easyBitly shortens your opened URL easily. Just hit the "bit"-button and the shortened URL will be copied to your clipboard.</p>
 			<label for="user">bitly-Username:</label> <input type="text" id="user" /><br>
 			<label for="pw">Password:</label> <input type="password" id="pw" /><br>
 			<label for="sync">Use Chrome Sync:</label> <input type="checkbox" id="sync" style="width: auto;" /> <label for="sync" style="width: auto; text-align: left; margin: 0; display: inline;">Sync your user data across all your devices.</label><br>
 			<input type="button" value="Save" id="save" />
 		</div>
 	</div>
-	<div id="foot">&copy; 2013 &middot; Clemens Damke</div>
+	<div id="foot">&copy; 2013 &middot; Clemens Damke &amp; GField</div>
 </body>
 </html>
